# liquid-ai-space-hackathon

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md
.claude/commands/: consistency-check.md  fireedge-collect.md  fireedge-train.md  fireguard-poc.md
.claude/skills/critic/: SKILL.md
.claude/skills/proposer/: SKILL.md
apps/: comparison.md
apps/coralshield/docs/: lean_canvas.md
apps/darkfleet/docs/: lean_canvas.md
apps/fireedge/: README.md  demo.py  lean_canvas.md  pyproject.toml  test_e2e.py
apps/fireedge/docs/: demo.ipynb  experiment_loss_masking.md  fire_detection_science.md  lean_canvas.md  model_report.md  poc2_results.md  poc_results.md
apps/fireedge/docs/video_assets/: narration_script.md
apps/fireedge/experiments/: compare_normalization.py  poc2_icl.py  poc2_lora.py  poc_data.py  poc_diag.py  poc_diag2.py  poc_diag3.py  poc_v2.py
apps/fireedge/finetune/: collator.py  config.py  dataset_builder.py  evaluate.py  train.py
apps/fireedge/src/: __init__.py  data_fetcher.py  detector.py  interfaces.py  pipeline.py  spectral.py  validator.py
apps/fireedge/tests/: test_spectral.py
apps/fireguard/: poc.py  pyproject.toml
apps/fireguard/docs/: Sentinel-2による発火前植生乾燥ストレス検出.md  lean_canvas.md  poc_results.md
apps/harborlens/docs/: lean_canvas.md
apps/infrawatch/docs/: lean_canvas.md
apps/orbittriage/docs/: lean_canvas.md
apps/portpulse/docs/: lean_canvas.md
docs/: onboard_hardware.md  sentinel2_guide.md  spectral_background.md
