[project]
name = "fireguard"
version = "0.1.0"
description = "Pre-fire fuel moisture risk detection using Sentinel-2 + LFM 2.5-VL"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "requests>=2.31",
    "scipy>=1.10",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fireguard"]

[dependency-groups]
dev = [
    "ipykernel>=7.0",
    "jupyter>=1.0",
]
